// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`AuthStack dev matches snapshot 1`] = `
{
  "Outputs": {
    "CognitoDomain": {
      "Description": "Add CNAME in Cloudflare: dev-auth.test.example.com → <this value>",
      "Export": {
        "Name": "DevCognitoDomain",
      },
      "Value": {
        "Fn::GetAtt": [
          "UserPoolDomainV228791335",
          "CloudFrontDistribution",
        ],
      },
    },
    "UserPoolClientId": {
      "Export": {
        "Name": "DevUserPoolClientId",
      },
      "Value": {
        "Ref": "UserPoolClient2F5918F7",
      },
    },
    "UserPoolId": {
      "Export": {
        "Name": "DevUserPoolId",
      },
      "Value": {
        "Ref": "UserPool6BA7E5F2",
      },
    },
  },
  "Parameters": {
    "BootstrapVersion": {
      "Default": "/cdk-bootstrap/hnb659fds/version",
      "Description": "Version of the CDK Bootstrap resources in this environment, automatically retrieved from SSM Parameter Store. [cdk:skip]",
      "Type": "AWS::SSM::Parameter::Value<String>",
    },
    "SsmParameterValuedevlinkshortifygoogleclientidC96584B6F00A464EAD1953AFF4B05118Parameter": {
      "Default": "/dev/link-shortify/google-client-id",
      "Type": "AWS::SSM::Parameter::Value<String>",
    },
  },
  "Resources": {
    "GoogleProvider566D8493": {
      "Properties": {
        "AttributeMapping": {
          "email": "email",
          "family_name": "family_name",
          "given_name": "given_name",
          "picture": "picture",
        },
        "ProviderDetails": {
          "authorize_scopes": "openid email profile",
          "client_id": {
            "Ref": "SsmParameterValuedevlinkshortifygoogleclientidC96584B6F00A464EAD1953AFF4B05118Parameter",
          },
          "client_secret": "test-google-secret",
        },
        "ProviderName": "Google",
        "ProviderType": "Google",
        "UserPoolId": {
          "Ref": "UserPool6BA7E5F2",
        },
      },
      "Type": "AWS::Cognito::UserPoolIdentityProvider",
    },
    "UserPool6BA7E5F2": {
      "DeletionPolicy": "Delete",
      "Properties": {
        "AccountRecoverySetting": {
          "RecoveryMechanisms": [
            {
              "Name": "verified_email",
              "Priority": 1,
            },
          ],
        },
        "AdminCreateUserConfig": {
          "AllowAdminCreateUserOnly": false,
        },
        "AutoVerifiedAttributes": [
          "email",
        ],
        "EmailVerificationMessage": "Your verification code is {####}",
        "EmailVerificationSubject": "Verify your Link-Shortify account",
        "Policies": {
          "PasswordPolicy": {
            "MinimumLength": 8,
            "RequireLowercase": true,
            "RequireNumbers": true,
            "RequireSymbols": false,
            "RequireUppercase": true,
          },
        },
        "Schema": [
          {
            "Mutable": true,
            "Name": "email",
            "Required": true,
          },
          {
            "Mutable": true,
            "Name": "given_name",
            "Required": false,
          },
          {
            "Mutable": true,
            "Name": "family_name",
            "Required": false,
          },
          {
            "Mutable": true,
            "Name": "picture",
            "Required": false,
          },
        ],
        "SmsVerificationMessage": "The verification code to your new account is {####}",
        "UserPoolName": "dev-link-shortify",
        "UsernameAttributes": [
          "email",
        ],
        "VerificationMessageTemplate": {
          "DefaultEmailOption": "CONFIRM_WITH_CODE",
          "EmailMessage": "Your verification code is {####}",
          "EmailSubject": "Verify your Link-Shortify account",
          "SmsMessage": "The verification code to your new account is {####}",
        },
      },
      "Type": "AWS::Cognito::UserPool",
      "UpdateReplacePolicy": "Delete",
    },
    "UserPoolClient2F5918F7": {
      "DependsOn": [
        "GoogleProvider566D8493",
      ],
      "Properties": {
        "AllowedOAuthFlows": [
          "code",
        ],
        "AllowedOAuthFlowsUserPoolClient": true,
        "AllowedOAuthScopes": [
          "openid",
          "email",
          "profile",
        ],
        "CallbackURLs": [
          "http://localhost:3000/api/auth/callback",
          "https://test.example.com/api/auth/callback",
          "https://dev.test.example.com/api/auth/callback",
        ],
        "ClientName": "dev-link-shortify-web",
        "ExplicitAuthFlows": [
          "ALLOW_USER_SRP_AUTH",
          "ALLOW_REFRESH_TOKEN_AUTH",
        ],
        "GenerateSecret": false,
        "LogoutURLs": [
          "http://localhost:3000",
          "https://test.example.com",
          "https://dev.test.example.com",
        ],
        "SupportedIdentityProviders": [
          "COGNITO",
          "Google",
        ],
        "UserPoolId": {
          "Ref": "UserPool6BA7E5F2",
        },
      },
      "Type": "AWS::Cognito::UserPoolClient",
    },
    "UserPoolDomainV228791335": {
      "DependsOn": [
        "UserPoolClient2F5918F7",
      ],
      "Properties": {
        "CustomDomainConfig": {
          "CertificateArn": "arn:aws:acm:us-east-1:123456789012:certificate/test-cert-id",
        },
        "Domain": "dev-auth.test.example.com",
        "UserPoolId": {
          "Ref": "UserPool6BA7E5F2",
        },
      },
      "Type": "AWS::Cognito::UserPoolDomain",
    },
  },
  "Rules": {
    "CheckBootstrapVersion": {
      "Assertions": [
        {
          "Assert": {
            "Fn::Not": [
              {
                "Fn::Contains": [
                  [
                    "1",
                    "2",
                    "3",
                    "4",
                    "5",
                  ],
                  {
                    "Ref": "BootstrapVersion",
                  },
                ],
              },
            ],
          },
          "AssertDescription": "CDK bootstrap stack version 6 required. Please run 'cdk bootstrap' with a recent version of the CDK CLI.",
        },
      ],
    },
  },
}
`;

exports[`AuthStack prod matches snapshot 1`] = `
{
  "Outputs": {
    "CognitoDomain": {
      "Description": "Add CNAME in Cloudflare: auth.test.example.com → <this value>",
      "Export": {
        "Name": "CognitoDomain",
      },
      "Value": {
        "Fn::GetAtt": [
          "UserPoolDomainV228791335",
          "CloudFrontDistribution",
        ],
      },
    },
    "SesDkim1": {
      "Description": "DKIM CNAME 1 — add to Cloudflare (no proxy)",
      "Value": {
        "Fn::Join": [
          "",
          [
            {
              "Fn::GetAtt": [
                "SesIdentity3ED17C37",
                "DkimDNSTokenName1",
              ],
            },
            " → ",
            {
              "Fn::GetAtt": [
                "SesIdentity3ED17C37",
                "DkimDNSTokenValue1",
              ],
            },
          ],
        ],
      },
    },
    "SesDkim2": {
      "Description": "DKIM CNAME 2 — add to Cloudflare (no proxy)",
      "Value": {
        "Fn::Join": [
          "",
          [
            {
              "Fn::GetAtt": [
                "SesIdentity3ED17C37",
                "DkimDNSTokenName2",
              ],
            },
            " → ",
            {
              "Fn::GetAtt": [
                "SesIdentity3ED17C37",
                "DkimDNSTokenValue2",
              ],
            },
          ],
        ],
      },
    },
    "SesDkim3": {
      "Description": "DKIM CNAME 3 — add to Cloudflare (no proxy)",
      "Value": {
        "Fn::Join": [
          "",
          [
            {
              "Fn::GetAtt": [
                "SesIdentity3ED17C37",
                "DkimDNSTokenName3",
              ],
            },
            " → ",
            {
              "Fn::GetAtt": [
                "SesIdentity3ED17C37",
                "DkimDNSTokenValue3",
              ],
            },
          ],
        ],
      },
    },
    "UserPoolClientId": {
      "Export": {
        "Name": "UserPoolClientId",
      },
      "Value": {
        "Ref": "UserPoolClient2F5918F7",
      },
    },
    "UserPoolId": {
      "Export": {
        "Name": "UserPoolId",
      },
      "Value": {
        "Ref": "UserPool6BA7E5F2",
      },
    },
  },
  "Parameters": {
    "BootstrapVersion": {
      "Default": "/cdk-bootstrap/hnb659fds/version",
      "Description": "Version of the CDK Bootstrap resources in this environment, automatically retrieved from SSM Parameter Store. [cdk:skip]",
      "Type": "AWS::SSM::Parameter::Value<String>",
    },
    "SsmParameterValueprodlinkshortifygoogleclientidC96584B6F00A464EAD1953AFF4B05118Parameter": {
      "Default": "/prod/link-shortify/google-client-id",
      "Type": "AWS::SSM::Parameter::Value<String>",
    },
  },
  "Resources": {
    "GoogleProvider566D8493": {
      "Properties": {
        "AttributeMapping": {
          "email": "email",
          "family_name": "family_name",
          "given_name": "given_name",
          "picture": "picture",
        },
        "ProviderDetails": {
          "authorize_scopes": "openid email profile",
          "client_id": {
            "Ref": "SsmParameterValueprodlinkshortifygoogleclientidC96584B6F00A464EAD1953AFF4B05118Parameter",
          },
          "client_secret": "test-google-secret",
        },
        "ProviderName": "Google",
        "ProviderType": "Google",
        "UserPoolId": {
          "Ref": "UserPool6BA7E5F2",
        },
      },
      "Type": "AWS::Cognito::UserPoolIdentityProvider",
    },
    "SesIdentity3ED17C37": {
      "Properties": {
        "EmailIdentity": "test.example.com",
      },
      "Type": "AWS::SES::EmailIdentity",
    },
    "UserPool6BA7E5F2": {
      "DeletionPolicy": "Retain",
      "Properties": {
        "AccountRecoverySetting": {
          "RecoveryMechanisms": [
            {
              "Name": "verified_email",
              "Priority": 1,
            },
          ],
        },
        "AdminCreateUserConfig": {
          "AllowAdminCreateUserOnly": false,
        },
        "AutoVerifiedAttributes": [
          "email",
        ],
        "EmailConfiguration": {
          "EmailSendingAccount": "DEVELOPER",
          "From": "Link-Shortify <noreply@test.example.com>",
          "SourceArn": {
            "Fn::Join": [
              "",
              [
                "arn:",
                {
                  "Ref": "AWS::Partition",
                },
                ":ses:",
                {
                  "Ref": "AWS::Region",
                },
                ":",
                {
                  "Ref": "AWS::AccountId",
                },
                ":identity/test.example.com",
              ],
            ],
          },
        },
        "EmailVerificationMessage": "Your verification code is {####}",
        "EmailVerificationSubject": "Verify your Link-Shortify account",
        "Policies": {
          "PasswordPolicy": {
            "MinimumLength": 8,
            "RequireLowercase": true,
            "RequireNumbers": true,
            "RequireSymbols": false,
            "RequireUppercase": true,
          },
        },
        "Schema": [
          {
            "Mutable": true,
            "Name": "email",
            "Required": true,
          },
          {
            "Mutable": true,
            "Name": "given_name",
            "Required": false,
          },
          {
            "Mutable": true,
            "Name": "family_name",
            "Required": false,
          },
          {
            "Mutable": true,
            "Name": "picture",
            "Required": false,
          },
        ],
        "SmsVerificationMessage": "The verification code to your new account is {####}",
        "UserPoolName": "link-shortify",
        "UsernameAttributes": [
          "email",
        ],
        "VerificationMessageTemplate": {
          "DefaultEmailOption": "CONFIRM_WITH_CODE",
          "EmailMessage": "Your verification code is {####}",
          "EmailSubject": "Verify your Link-Shortify account",
          "SmsMessage": "The verification code to your new account is {####}",
        },
      },
      "Type": "AWS::Cognito::UserPool",
      "UpdateReplacePolicy": "Retain",
    },
    "UserPoolClient2F5918F7": {
      "DependsOn": [
        "GoogleProvider566D8493",
      ],
      "Properties": {
        "AllowedOAuthFlows": [
          "code",
        ],
        "AllowedOAuthFlowsUserPoolClient": true,
        "AllowedOAuthScopes": [
          "openid",
          "email",
          "profile",
        ],
        "CallbackURLs": [
          "http://localhost:3000/api/auth/callback",
          "https://test.example.com/api/auth/callback",
        ],
        "ClientName": "link-shortify-web",
        "ExplicitAuthFlows": [
          "ALLOW_USER_SRP_AUTH",
          "ALLOW_REFRESH_TOKEN_AUTH",
        ],
        "GenerateSecret": false,
        "LogoutURLs": [
          "http://localhost:3000",
          "https://test.example.com",
        ],
        "SupportedIdentityProviders": [
          "COGNITO",
          "Google",
        ],
        "UserPoolId": {
          "Ref": "UserPool6BA7E5F2",
        },
      },
      "Type": "AWS::Cognito::UserPoolClient",
    },
    "UserPoolDomainV228791335": {
      "DependsOn": [
        "UserPoolClient2F5918F7",
      ],
      "Properties": {
        "CustomDomainConfig": {
          "CertificateArn": "arn:aws:acm:us-east-1:123456789012:certificate/test-cert-id",
        },
        "Domain": "auth.test.example.com",
        "UserPoolId": {
          "Ref": "UserPool6BA7E5F2",
        },
      },
      "Type": "AWS::Cognito::UserPoolDomain",
    },
  },
  "Rules": {
    "CheckBootstrapVersion": {
      "Assertions": [
        {
          "Assert": {
            "Fn::Not": [
              {
                "Fn::Contains": [
                  [
                    "1",
                    "2",
                    "3",
                    "4",
                    "5",
                  ],
                  {
                    "Ref": "BootstrapVersion",
                  },
                ],
              },
            ],
          },
          "AssertDescription": "CDK bootstrap stack version 6 required. Please run 'cdk bootstrap' with a recent version of the CDK CLI.",
        },
      ],
    },
  },
}
`;
